polishing about me page

--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -89,13 +89,22 @@
                     products. I pretty good in this area especially when am using <span class="text-success"><strong>Figma</strong></span>. 
                 </p>
                 <li><strong>Others</strong></li>
-                <p>
-                    I want to mention this skills without going in details,
-                </p>
                 <ul>
                     <li>Video Editor | Adobe Premier</li>
+                    <p>
+                            I am not a Pro in this but I have basic, enough skills to edit a video 
+                            with basic effects and transitions
+                    </p>
                     <li>Photo Editor | Adobe Photoshop</li>
+                    <p>
+                        This is my favorite, before I started software development,
+                        I spent enough time doing editing photos. I am good at this.
+                    </p>
                     <li>Professional Driver</li>
+                    <p>
+                        Went through driving school course, graduated and got a government
+                        driving license for light vehicles.
+                    </p>
                 </ul>
             </ul>
 
