creating social media handles part

--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.html
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8 mx-auto my-5">
+        <div class="col-md-12 mx-auto contact">
 
             <!-- Introductory part -->
 
-            <div class="heading">
+            <div>
                 <h1><strong>Contact Me</strong></h1>
                 <hr>
                 <p>
@@ -43,8 +43,35 @@
                     <button class="btn btn-primary m-3" type="submit">Submit</button>
 
                 </form>
+
+            </div>
+
+            <!-- Other contacts -->
+            <div class="socialMedia">
+
+                <div class="heading">
+                    <h3 class="text-success text-center"><strong>Social Media</strong></h3>
+                    <hr>
+                    <p>
+                        These are my social media handles, the only ones. For some reason you might
+                        prefer reaching out using them. I response faster to contacts made through the above form though.
+                        This is becuase I get notified when there is a new message and I check it regularly too.
+                    </p>
+                </div>
+
+                <!--Social media handles  -->
+                <div class="handles">
+                    <ul>
+                        <li><strong><a href="">Twitter</a></strong></li>
+                        <li><strong><a href="">Facebook</a></strong></li>
+                        <li><strong><a href="">Linked In</a></strong></li>
+                        <li><strong><a href="">Github</a></strong></li>
+                    </ul>
+                </div>
+
             </div>
 
         </div>
     </div>
+
 </div>
