--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.css
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.css
@@ -1,5 +1,5 @@
 hr{
-    width: 35%;
+    width: 40%;
     border: 1px solid black;
     margin-top: 1%;
 }
@@ -9,6 +9,27 @@ label{
 }
 
 .form{
+    width: 50%;
+    margin: auto;
+}
+
+.contact{
+    box-shadow: 0px 0px 2px 0px;
+    padding: 5%;
+    background-color: white;
+    border-radius: 20px;
+}
+
+.socialMedia{
+    padding: 2%;
+    background-color:rgb(229, 240, 250);
+    border-radius: 20px;
     width: 75%;
     margin: auto;
+}
+
+.heading hr{
+    margin: auto;
+    width: 30%;
+    margin-bottom: 2%;
 }
