--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.css
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.css
@@ -33,3 +33,22 @@ label{
     width: 30%;
     margin-bottom: 2%;
 }
+
+ul, li{
+    margin-left: 5%;
+}
+
+/* .aftersubmit hr{
+    width: 30%;
+    margin: auto;
+    margin-bottom: 1%;
+} */
+
+/* .aftersubmit{
+    width: 50%;
+    margin: auto;
+    background-color: rgb(229, 240, 250);
+    box-shadow: 0px 0px 2px 0px;
+    padding: 2%;
+    margin-bottom: 5%;
+} */
