--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.html
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.html
@@ -25,7 +25,7 @@
             <!-- Contact me form -->
             <div class="form my-5">
 
-                <form action="">
+                <form action="" [formGroup]="contactForm" (ngSubmit)="submit()">
 
                     <!--Email address  -->
                     <div class="form-group">
@@ -45,6 +45,17 @@
                 </form>
 
             </div>
+
+            <!-- After form submit -->
+            <!-- <div class="aftersubmit text-center text-success">
+
+                <h2><strong>Success</strong></h2>
+                <hr>
+                <p>
+                    Thanks for reaching out, I will get back to you as soon as possible.
+                </p>
+
+            </div> -->
 
             <!-- Other contacts -->
             <div class="socialMedia">
