--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.html
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.html
@@ -30,13 +30,13 @@
                     <!--Email address  -->
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Email address</strong></label>
-                        <input type="email" class="form-control">
+                        <input type="email" class="form-control" name="email" formControlName="email">
                     </div>
 
                     <!-- Message itself -->
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Message</strong></label>
-                        <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                        <textarea name="message" id="" cols="30" rows="5" class="form-control" formControlName="message"></textarea>
                     </div>
 
                     <!-- Submit button -->
