--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.html
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.html
@@ -30,13 +30,29 @@
                     <!--Email address  -->
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Email address</strong></label>
-                        <input type="email" class="form-control" name="email" formControlName="email">
+                        <input type="email" class="form-control" name="email" formControlName="email"
+                        [class.is-invalid]="email?.invalid && email?.dirty"
+                        >
+                    </div>
+
+                    <!-- Email error messages -->
+                    <div class="text-danger" *ngIf="email?.invalid && email?.dirty">
+                        <small *ngIf="email?.errors?.['required']">Email required</small>
+                        <small *ngIf="email?.errors?.['pattern']">Invalid email adress</small>
                     </div>
 
                     <!-- Message itself -->
                     <div class="form-group">
                         <label for="" class="mt-3 mb-1"><strong>Message</strong></label>
-                        <textarea name="message" id="" cols="30" rows="5" class="form-control" formControlName="message"></textarea>
+                        <textarea name="message" id="" cols="30" rows="5" class="form-control" formControlName="message"
+                        [class.is-invalid]="message?.invalid && message?.dirty"
+                        ></textarea>
+                    </div>
+
+                    <!-- Message error messages -->
+                    <div class="text-danger" *ngIf="message?.invalid && message?.dirty">
+                        <small *ngIf="message?.errors?.['required']">Message required</small>
+                        <small *ngIf="message?.errors?.['forbiddenterm']">{{message?.errors?.['forbiddenterm'].value}} is not accepted</small>                        
                     </div>
 
                     <!-- Submit button -->
