creating messages in admin panel

--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md-10 mx-auto my-5 text-center about">
+        <div class="col-md-10 mx-auto text-center about">
 
             <!-- Heading -->
                 <h3 class="text-success"><strong>About The Blog</strong></h3>
@@ -46,7 +46,7 @@
 
         </div>
 
-        <div class="col-md-8 mx-auto about text-center">
+        <div class="col-md-8 mx-auto about text-center my-3">
 
             <!-- Heading -->
             <h3 class="text-success"><strong>About Me</strong></h3>
@@ -67,10 +67,10 @@
     </div>
 
     <!-- About Me detailed row -->
-    <div class="row">
+    <div class="row my-2">
 
         <!-- Skills -->
-        <div class="col-md-3 mx-auto my-4 skills">
+        <div class="col-md-3 mx-auto skills">
             <div class="text-center">
                 <h3 class="text-success"><strong>Skills</strong></h3>
                 <hr>
@@ -111,7 +111,7 @@
         </div>
 
         <!-- Passions -->        
-        <div class="col-md-4 mx-auto my-4 passions">
+        <div class="col-md-4 mx-auto passions">
             <div class="text-center">
                 <h3 class="text-success"><strong>Passion</strong></h3>
                 <hr>
@@ -159,7 +159,7 @@
         </div>
 
         <!-- Hobbies -->
-        <div class="col-md-5 mx-auto my-4 hobbies">
+        <div class="col-md-5 mx-auto hobbies">
             <div class="text-center">
                 <h3 class="text-success"><strong>Hobbies</strong></h3>
                 <hr>
