--- a/Blog-UI/src/app/Modules/admin/admin.component.html
+++ b/Blog-UI/src/app/Modules/admin/admin.component.html
@@ -45,6 +45,7 @@
 
                 <button class="btn btn-primary m-3" type="button" routerLink="users">Users</button>
                 <button class="btn btn-success m-3" type="button" routerLink="blogs">Blogs</button>
+                <button class="btn btn-info m-3" type="button" routerLink="messages">Messages</button>
 
         </div>
 
