adjusting box shadow

--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.html
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.html
@@ -67,7 +67,7 @@
     </div>
 
     <!-- About Me detailed row -->
-    <div class="row my-2">
+    <div class="row ">
 
         <!-- Skills -->
         <div class="col-md-3 mx-auto skills">
