introduction in home page

--- a/Blog-UI/src/app/Components/contact-me/contact-me.component.html
+++ b/Blog-UI/src/app/Components/contact-me/contact-me.component.html
@@ -56,7 +56,7 @@
                     </div>
 
                     <!-- Submit button -->
-                    <button class="btn btn-primary m-3" type="submit">Submit</button>
+                    <button class="btn btn-primary m-3" type="submit">Sent</button>
 
                 </form>
 
