--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -1,1 +1,19 @@
-<p>homepage works!</p>
+<div class="container">
+    <div class="row topIntroduction">
+        <div class="col-md-12 mx-auto">
+
+            <div class="heading text-center">
+                <h1><strong>Cheborgei Vitalis Blog</strong></h1>
+                <hr>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore impedit
+                     accusantium sequi asperiores ea ipsum suscipit autem quo temporibus enim 
+                     vel cupiditate nulla obcaecati, animi, aut nostrum, eaque quam.
+                </p>
+
+            </div>
+
+        </div>
+    </div>
+</div>
