--- a/Blog-UI/src/app/Components/about-blog/about-blog.component.css
+++ b/Blog-UI/src/app/Components/about-blog/about-blog.component.css
@@ -1,4 +1,13 @@
-.about, .skills, .passions, .hobbies {
+.about {
+    background-color: white;
+    padding: 2%;
+    /* box-shadow: 0px 0px 2px 0px grey; */
+    border-radius: 20px;
+}
+
+.skills,
+.passions,
+.hobbies{
     background-color: white;
     padding: 2%;
     box-shadow: 0px 0px 2px 0px grey;
