introducing the blog in homepage

--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -2,14 +2,33 @@
     <div class="row topIntroduction">
         <div class="col-md-12 mx-auto">
 
-            <div class="heading text-center">
-                <h1><strong>Cheborgei Vitalis Blog</strong></h1>
+            <div class="heading">
+                <h1 class=" text-center"><strong>Cheborgei Vitalis Blog</strong></h1>
                 <hr>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore impedit
-                     accusantium sequi asperiores ea ipsum suscipit autem quo temporibus enim 
-                     vel cupiditate nulla obcaecati, animi, aut nostrum, eaque quam.
+                    Hello there? If you are not here by accident, you probably know me. In any case, I am
+                    Vitalis, Kipyegon Kirui Vitalis, a full-stack software developer or a software engineer if 
+                    you might call it. There a lot about me but I satisfied introducing myself with these words.
+                    My favorite and choice of stack is MEAN stack, yes, <span class="text-success"><strong>MEAN</strong></span>.
+                </p>
+                <p>
+                    If you are a software developer, you probably know that they stack is not the first choice
+                    for many people. If not saying it's not popular but the trend is not rising compared to other 
+                    stacks. At least the Angular part, I believe a number of people out there prefers 
+                    <span class="text-success"><strong>Vue Js || React Js</strong></span> over 
+                    angular. Personally, I love Angular and if you ask me, I will always choose Angular any day
+                    any minute.
+                </p>
+                <p>
+                    For new developers and those who wish to venture in software development field,
+                    I am not endorsing Angular, I just saying my personal favorite. Don't make a decision
+                    using it, believe me, I haven't tried either of the framework and the library.
+                </p>
+                <p>
+                    Anyway, this is my personal blog, developed the entire system using MEAN stack. This is where I
+                    think loud, share ideas, engage with you guys, argue software development topics, learn from you
+                    good people, meet clients among other things we are going to explore. Cheers.
                 </p>
 
             </div>
