introducing admin blog panel

--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -1,1 +1,18 @@
-<p>blogs works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 mx-auto blogAdmin">
+
+            <!-- Heading -->
+            <div class="text-center heading">
+                <h1 class="text-success"><strong>Admin | Blogs Panel</strong></h1>
+                <hr>
+                <p>
+                    This panel displays created blog posts on the left to assist admin manage and track them. 
+                    To the rigth is a form for creating a new blog post. Expanding a blog post displays more 
+                    details on the blog and more management information about the same.
+                </p>
+            </div>
+
+        </div>
+    </div>
+</div>
