--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-12 mx-auto blogAdmin">
+    <div class="row blogAdmin">
+        <div class="col-md-12 mx-auto">
 
             <!-- Heading -->
             <div class="text-center heading">
@@ -14,5 +14,35 @@
             </div>
 
         </div>
+
+        <!-- Existing blogs and blog form -->
+        <!-- Running blogs -->
+        <div class="col-md-5 mx-auto my-3 runningBlogs">
+
+            <div class="text-center heading">
+                <h2 class="text-success"><strong>Running Blogs</strong></h2>
+                <hr>
+                <p>
+                    These are blogs that are currently running and users are able to interact with them. 
+                    You can expand any of them by clicking on them, through this, you can access a more comprehensive 
+                    details and action buttons.
+                </p>
+            </div>
+
+        </div>
+
+        <!-- Blog creation form -->
+        <div class="col-md-6 mx-auto my-3 blogForm">
+
+            <div class="text-center heading">
+                <h2 class="text-success"><strong>Create a new Blog</strong></h2>
+                <hr>
+                <p>
+                    Use this blog form to create a new blog post.
+                </p>
+            </div>
+
+        </div>
+
     </div>
 </div>
