--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -29,6 +29,42 @@
                 </p>
             </div>
 
+            <!-- Sample Blogs -->
+            <div class="blogs">
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks</strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio. 
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia 
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                        <button class="btn btn-primary btn-sm m-1">Expand</button>
+                        <button class="btn btn-danger btn-sm m-1">Delete</button>
+                </ul>
+
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks</strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Expand</button>
+                    <button class="btn btn-danger btn-sm m-1">Delete</button>
+                </ul>
+
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks</strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Expand</button>
+                    <button class="btn btn-danger btn-sm m-1">Delete</button>
+                </ul>
+            </div>
+
         </div>
 
         <!-- Blog creation form -->
@@ -40,6 +76,56 @@
                 <p>
                     Use this blog form to create a new blog post.
                 </p>
+            </div>
+
+            <!-- Blog form -->
+            <div class="form">
+
+                <form action="">
+
+                    <!-- Image -->
+                    <div class="form-group">
+                        <label for="" class="mb-1 mt-3"><strong>Image</strong></label>
+                        <input type="file" class="form-control">
+                    </div>
+
+                    <!-- Title -->
+                    <div class="form-group">
+                        <label for="" class="mb-1 mt-3"><strong>Title</strong></label>
+                        <input type="text" class="form-control">
+                    </div>
+
+                    <!-- Category -->
+                    <div class="form-group mb-3 mt-3">
+                        <p class="text-primary"><strong>Select categories applicable</strong></p>
+                        <input type="checkbox" class="form-check-input">
+                        <label for="" class="form-check-label">General software engineering</label>
+                    </div>
+                    <div class="form-group mb-3 mt-3">
+                        <input type="checkbox" class="form-check-input">
+                        <label for="" class="form-check-label ">MEAN Stack</label>
+                    </div>
+                    <div class="form-group mb-3 mt-3">
+                        <input type="checkbox" class="form-check-input">
+                        <label for="" class="form-check-label">Angular</label>
+                    </div>
+                    <div class="form-group mb-3 mt-3">
+                        <input type="checkbox" class="form-check-input">
+                        <label for="" class="form-check-label">Others</label>
+                    </div>
+
+                    <!-- Blog body -->
+                    <div class="form-group">
+                        <label for="" class="mb-1 mt-3">Description</label>
+                        <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                    </div>
+
+                    <!-- Buttons -->
+                    <button class="btn btn-primary m-3">Post</button>
+                    <button class="btn btn-info m-3">Reset</button>
+
+                </form>
+
             </div>
 
         </div>
