--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -131,4 +131,21 @@
         </div>
 
     </div>
+
+    <!-- Switch panel row -->
+    <div class="row switchPanel">
+        <div class="col-md-6 mx-auto text-center my-3">
+            <h2><strong>Switch Panel</strong></h2>
+            <hr>
+            <p>
+                Use respective buttons below to switch between other admin panels.
+            </p>
+
+            <!-- Buttons -->
+            <a href="admin/users"><button class="btn btn-primary m-3"><strong>Users</strong></button></a>
+            <a href="admin/messages"><button class="btn btn-info m-3">Messages</button></a>
+
+        </div>
+    </div>
+
 </div>
