--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -35,4 +35,36 @@
 
         </div>
     </div>
+
+    <!-- Blogs row -->
+    <div class="row blogs">
+
+        <!-- Headings -->
+        <div class="heading">
+            <h2 class="text-center"><strong>Blogs</strong></h2>
+            <hr>
+            <p>
+                This is it, this is where we engage. It's down to comments section guys. Welcome and let's have a productive 
+                engagements.
+            </p>
+
+            <div class="list text-start">
+                <p>
+                    <strong>Remember;</strong>
+                </p>
+                <ul class="text-primary">
+                    <li>Being polite doesn't cost a thing,</li>
+                    <li>Lighting one's candle doesn't make yours less brighter,</li>
+                    <li>Bugs in software engineering are as important as learning basics, don't be discourage,</li>
+                    <li>You don't have to be right in your comments, try it and there learning and exchange of ideas begins </li>
+                </ul>
+                <p>
+                    Let's get to it, cheers!
+                </p>
+            </div>
+            
+        </div>
+        
+    </div>
+
 </div>
