introduction to top and new blogs

--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -64,6 +64,38 @@
             </div>
             
         </div>
+
+        <!-- Trending and New blogs section -->
+        <!-- Trending -->
+        <div class="col-md-7 mx-auto my-2 topBlogs">
+        
+            <!-- Heading -->
+            <div class="heading text-center">
+                <h2><strong>Top | Trending Blogs</strong></h2>
+                <hr>
+                <p>
+                    This section holds blogs that are popular based on total engagements each have. Use the join
+                    button to expanding a blog of your choice. Then you get access to comments from
+                    other users. Plus a form for you to enter engagement.
+                </p>
+            </div>
+        
+        </div>
+        
+        <!-- New Blogs -->
+        <div class="col-md-4 mx-auto my-2 newBlogs">
+        
+            <!-- Heading -->
+            <div class="heading text-center">
+                <h2><strong>New Blogs</strong></h2>
+                <hr>
+                <p>
+                    These are currently created blogs and just like trending blogs,
+                    enter their engagements through the join button.
+                </p>
+            </div>
+        
+        </div>
         
     </div>
 
