adding sample blogs and their styles

--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -67,17 +67,65 @@
 
         <!-- Trending and New blogs section -->
         <!-- Trending -->
-        <div class="col-md-7 mx-auto my-2 topBlogs">
+        <div class="col-md-7 mx-auto my-2 activeBlogs">
         
             <!-- Heading -->
             <div class="heading text-center">
-                <h2><strong>Top | Trending Blogs</strong></h2>
+                <h2><strong>Active Blogs</strong></h2>
                 <hr>
                 <p>
                     This section holds blogs that are popular based on total engagements each have. Use the join
                     button to expanding a blog of your choice. Then you get access to comments from
                     other users. Plus a form for you to enter engagement.
                 </p>
+            </div>
+
+            <!-- Sample Blogs -->
+            <div>
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks | <span class="category">Angular</span></strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Join</button>
+                    <button class="btn btn-success btn-sm m-1">Star</button>
+                </ul>
+            
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks | <span class="category">Others</span></strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Join</button>
+                    <button class="btn btn-success btn-sm m-1">Star</button>
+                </ul>
+            
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks | <span class="category">MEAN Stack</span></strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Join</button>
+                    <button class="btn btn-success btn-sm m-1">Star</button>
+                </ul>
+
+                <ul>
+                     <li><strong>Choice of Frontend Frameworks | <span class="category">General Software Engineering</span></strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Join</button>
+                    <button class="btn btn-success btn-sm m-1">Star</button>
+                </ul>
+
             </div>
         
         </div>
@@ -93,6 +141,42 @@
                     These are currently created blogs and just like trending blogs,
                     enter their engagements through the join button.
                 </p>
+            </div>
+
+            <!-- Sample Blogs -->
+            <div>
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks | <span class="category">React Js</span></strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Join</button>
+                    <button class="btn btn-success btn-sm m-1">Star</button>
+                </ul>
+            
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks | <span class="category">Angular Material</span></strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Join</button>
+                    <button class="btn btn-success btn-sm m-1">Star</button>
+                </ul>
+            
+                <ul>
+                    <li><strong>Choice of Frontend Frameworks | <span class="category">Vue Js</span></strong></li>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti enim ipsum est optio.
+                        Quo architecto, nesciunt sapiente tenetur laboriosam ea quibusdam amet quia
+                        molestias necessitatibus, minus dolorum repellendus repudiandae doloribus.
+                    </p>
+                    <button class="btn btn-primary btn-sm m-1">Join</button>
+                    <button class="btn btn-success btn-sm m-1">Star</button>
+                </ul>
             </div>
         
         </div>
