--- a/Blog-UI/src/app/Components/homepage/homepage.component.css
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.css
@@ -33,3 +33,23 @@ hr{
 .list li{
     font-weight: 600;
 }
+
+/* Trending blogs */
+.activeBlogs{
+    background-color: rgb(218, 236, 251);
+    padding: 1%;
+    border-radius: 10px;
+    /* box-shadow: 0px 0px 3px 0px grey; */
+}
+
+.newBlogs{
+    background-color: rgb(201, 255, 255);
+    padding: 2%;
+    border-radius: 10px;
+    /* box-shadow: 0px 0px 3px 0px grey; */
+}
+
+.category{
+    background-color: gold;
+    padding: 5px;
+}
