--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -131,7 +131,7 @@
         </div>
         
         <!-- New Blogs -->
-        <div class="col-md-4 mx-auto my-2 newBlogs">
+        <div class="col-md-5 mx-auto my-2 newBlogs">
         
             <!-- Heading -->
             <div class="heading text-center">
@@ -179,6 +179,65 @@
                 </ul>
             </div>
         
+        </div>
+
+        <!-- Suggestion and Archirves -->
+
+        <div class="col-md-8 mx-auto my-5 suggestion">
+
+            <!-- heading -->
+            <div class="heading">
+                <h2 class="text-center"><strong>Suggestion and Archirves</strong></h2>
+                <hr>
+            </div>
+
+            <p>
+                You may have noticed that blogs being displayed runs for a short period
+                of time. You may be new here or being nostagic on older blogs, great news, you can still access this 
+                blogs using respective buttons below.
+            </p>
+
+            <!-- Buttons -->
+            <div class="text-center">
+                <a href="/archirves">
+                    <button class="btn btn-primary m-2">Archirves</button>
+                </a>
+            
+            </div>
+
+            <!-- Suggestion form -->
+            <div class="suggestionForm my-3">
+
+                <div class="formTitle text-center">
+                    <h3><strong>Suggest a blog</strong></h3>
+                    <hr>
+                </div>
+
+                <!-- form -->
+                <form action="">
+
+                    <div class="form-group">
+                        <label for="" class="mt-3 mb-1"><strong>Title</strong></label>
+                        <input type="text" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="" class="mt-3 mb-1"><strong>Category</strong></label>
+                        <input type="text" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="" class="mt-3 mb-1"><strong>Blog</strong></label>
+                        <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                    </div>
+
+                    <!-- Submit button -->
+                    <button class="btn btn-primary m-3" type="submit">Submit</button>
+
+                </form>
+
+            </div>
+
         </div>
         
     </div>
