--- a/Blog-UI/src/app/Components/homepage/homepage.component.html
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12 mx-auto">
 
             <div class="heading">
-                <h1 class=" text-center"><strong>Cheborgei Vitalis Blog</strong></h1>
+                <h1 class=" text-center myName"><strong>Cheborgei Vitalis Blog</strong></h1>
                 <hr>
 
                 <p>
@@ -41,7 +41,7 @@
 
         <!-- Headings -->
         <div class="heading">
-            <h2 class="text-center"><strong>Blogs</strong></h2>
+            <h2 class="text-center topBlogsName"><strong>Blogs</strong></h2>
             <hr>
             <p>
                 This is it, this is where we engage. It's down to comments section guys. Welcome and let's have a productive 
@@ -71,7 +71,7 @@
         
             <!-- Heading -->
             <div class="heading text-center">
-                <h2><strong>Active Blogs</strong></h2>
+                <h2 class="active"><strong>Active Blogs</strong></h2>
                 <hr>
                 <p>
                     This section holds blogs that are popular based on total engagements each have. Use the join
@@ -135,7 +135,7 @@
         
             <!-- Heading -->
             <div class="heading text-center">
-                <h2><strong>New Blogs</strong></h2>
+                <h2 class="new"><strong>New Blogs</strong></h2>
                 <hr>
                 <p>
                     These are currently created blogs and just like trending blogs,
@@ -187,7 +187,7 @@
 
             <!-- heading -->
             <div class="heading">
-                <h2 class="text-center"><strong>Suggestion and Archirves</strong></h2>
+                <h2 class="text-center suggestionN1"><strong>Suggestion and Archirves</strong></h2>
                 <hr>
             </div>
 
@@ -209,7 +209,7 @@
             <div class="suggestionForm my-3">
 
                 <div class="formTitle text-center">
-                    <h3><strong>Suggest a blog</strong></h3>
+                    <h3 class="suggestionN2"><strong>Suggest a blog</strong></h3>
                     <hr>
                 </div>
 
