--- a/Blog-UI/src/app/Components/homepage/homepage.component.css
+++ b/Blog-UI/src/app/Components/homepage/homepage.component.css
@@ -8,33 +8,33 @@ h1, h2, h3, h4, h5, h6{
 
 .myName{
     width: 50%;
-    border-radius: 20px;
+    border-radius: 50px 0px 150px 0px;
 }
 
 .topBlogsName {
     width: 25%;
-    border-radius: 20px;
+    border-radius: 150px 0px 150px 0px;
 }
 
 .active,
 .new{
-    width: 40%;
-    border-radius: 20px;
+    width: 50%;
+    border-radius: 150px 0px 150px 0px;
 }
 
 .suggestionN1{
-    width: 60%;
-    border-radius: 20px;
+    width: 70%;
+    border-radius: 150px 0px 150px 0px;
 }
 
 .suggestionN2 {
-    width: 50%;
-    border-radius: 20px;
+    width: 60%;
+    border-radius: 150px 0px 150px 0px;
 }
 
 .topIntroduction{
     background-color: white;
-    border-radius: 20px;
+    border-radius: 100px 0px 100px 0px;
     padding-top: 2%;
 }
 hr{
@@ -73,14 +73,14 @@ hr{
 .activeBlogs{
     /* background-color: rgb(218, 236, 251); */
     padding: 1%;
-    border-radius: 10px;
+    border-radius: 150px 0px 150px 0px;
     box-shadow: 0px 0px 5px 0px grey;
 }
 
 .newBlogs{
     /* background-color: rgb(201, 255, 255); */
     padding: 1%;
-    border-radius: 10px;
+    border-radius: 150px 0px 150px 0px;
     box-shadow: 0px 0px 5px 0px grey;
 }
 
@@ -100,6 +100,7 @@ label{
 }
 
 .suggestion{
+    border-radius: 100px 0px 150px 0px;
     padding: 2%;
     box-shadow: 0px 0px 20px -10px grey;
 }
